--- a/src/css/style.css
+++ b/src/css/style.css
@@ -6,7 +6,53 @@
     list-style: none;
 }
 
+body {
+    background-color: #264653;
+}
+
 .hero {
     position: relative;
-    background-image: url('pexels-eberhardgross-1064162.jpg');
+    background-image: url('../img/pexels-eberhardgross-1064162.jpg');
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+    background-size: cover;
+    background-position: center;
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
+
+.hero-content {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: #fff;
+    background-color: rgba(0, 0, 0, 0.5);
+    padding: 20px;
+    border-radius: 10px;
+}
+
+.hero h1 {
+    font-family: "Playfair Display", sans-serif;
+    font-size: 5rem;
+    margin-bottom: 28px;
+    font-weight: 700;
+}
+
+.hero button {
+    padding: 15px 30px;
+    background-color: #264653;
+    color: #fff;
+    border: none;
+    border-radius: 28px;
+    font-size: 1.2rem;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+}
+
+.hero button:hover {
+    background-color: #178fbe;
 }
